refactor: plugin handler and manager